# citewatch

./: README.md  dois.txt  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  stackhawk.yml  track.yml
citewatch/: __init__.py  cli.py  fetcher.py  matcher.py  models.py  orcid.py  report.py  store.py  tracker.py  validator.py
citewatch/parser/: extract.py  pdf.py
tests/: test_add.py  test_matcher.py  test_orcid.py  test_parser.py  test_report.py  test_tracker.py  test_validator.py
tests/fixtures/: crossref_mullaney_10.1017_S0021911816000577.json  crossref_search_mullaney.json  crossref_zhu_doi.json  openalex_citing_mullaney_page1.json  openalex_citing_mullaney_page2.json  openalex_mullaney_work.json  openalex_search_mullaney.json  openalex_zhu_doi.json  orcid_works_0000-0002-1789-5272.json
