[build-system]
requires = ["setuptools==75.1.0", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "citewatch"
version = "0.1.0"
description = "MVP tool for CV parsing, citation tracking, and reference validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pypdf==5.1.0",
  "rapidfuzz==3.10.1",
  "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "ruff==0.6.9",
]

[project.scripts]
citewatch = "citewatch.cli:main"

[tool.setuptools]
packages = ["citewatch", "citewatch.parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
